--- a/terminator/config
+++ b/terminator/config
@@ -1,6 +1,11 @@
 [global_config]
   window_state = maximise
 [keybindings]
+  go_down = <Alt>j
+  go_left = <Alt>h
+  go_right = <Alt>l
+  go_up = <Alt>k
+  layout_launcher = None
 [layouts]
   [[default]]
     [[[child1]]]
