--- a/terminator/config
+++ b/terminator/config
@@ -17,8 +17,10 @@
 [plugins]
 [profiles]
   [[default]]
+    backspace_binding = control-h
     cursor_color = "#aaaaaa"
     cursor_shape = underline
+    delete_binding = ascii-del
     scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
