--- a/terminator/config
+++ b/terminator/config
@@ -21,4 +21,4 @@
     cursor_shape = underline
     scrollbar_position = hidden
     show_titlebar = False
-    use_system_font = False
+    use_system_font = True
