--- a/terminator/config
+++ b/terminator/config
@@ -1,18 +1,19 @@
 [global_config]
-  tab_position = hidden
   window_state = maximise
+  tab_position = hidden
 [keybindings]
+  go_up = <Alt>k
   go_down = <Alt>j
   go_left = <Alt>h
   go_right = <Alt>l
-  go_up = <Alt>k
   toggle_zoom = <Alt>f
   layout_launcher = None
 [profiles]
   [[default]]
-    scrollbar_position = hidden
+    cursor_color = "#aaaaaa"
+    foreground_color = "#ffffff"
     show_titlebar = False
-    use_system_font = True
+    scrollbar_position = hidden
 [layouts]
   [[default]]
     [[[child1]]]
