--- a/terminator/config
+++ b/terminator/config
@@ -13,6 +13,7 @@
     cursor_color = "#aaaaaa"
     show_titlebar = False
     scrollbar_position = hidden
+    use_theme_colors = True
 [layouts]
   [[default]]
     [[[child1]]]
