--- a/readline/.inputrc
+++ b/readline/.inputrc
@@ -1,7 +1,7 @@
 set editing-mode vi
 set keymap vi
 set show-mode-in-prompt on
-set vi-ins-mode-string "+"
+set vi-ins-mode-string "$"
 set vi-cmd-mode-string ":"
 
 # single tab completion as opposed to requiring a double tab
