clear fix for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
 # source config file
 bind r source-file ~/.tmux.conf
 
+# screen mode (for clear to work)
+set -g default-terminal "screen-256color"
+
 # faster escapes from insert mode
 set -g escape-time 10
 
