mode-keys vi for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,9 @@ bind r source-file ~/.tmux.conf
 # screen mode (for clear to work)
 set -g default-terminal "screen-256color"
 
+# scrolling with vi
+setw -g mode-keys vi
+
 # faster escapes from insert mode
 set -g escape-time 10
 
