--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,10 @@ bind-key -n M-2 select-window -t 2
 bind-key -n M-3 select-window -t 3
 bind-key -n M-4 select-window -t 4
 
+# vim style copy to clipboard
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
+
 # easy-to-remember split pane commands
 bind -n C-E split-window -h
 bind -n C-O split-window -v
