--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,8 @@
+# change prefix to Ctrl-a (like in gnu-screen)
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # source config file
 bind r source-file ~/.tmux.conf
 
