tmux panes broadcasting toggle

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -44,4 +44,7 @@ bind -n M-f resize-pane -Z
 # disable status bar
 set -g status off
 
+# toggle broadcast to all panes
+bind-key a set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
 set -g pane-active-border-style "bg=default fg=default"
