--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,6 +45,6 @@ bind -n M-f resize-pane -Z
 set -g status off
 
 # toggle broadcast to all panes
-bind-key a set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+bind-key a set-window-option synchronize-panes\; display-message "broadcast is #{?pane_synchronized,on,off}"
 
 set -g pane-active-border-style "bg=default fg=default"
