--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,8 +29,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
 
 # easy-to-remember split pane commands
-bind -n C-E split-window -h
-bind -n C-O split-window -v
+bind -n C-E split-window -h -c "#{pane_current_path}"
+bind -n C-O split-window -v -c "#{pane_current_path}"
 
 # resize the current pane using Alt + direction
 bind -n M-k select-pane -U
