tmux setup extended

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,10 +19,12 @@ set -g escape-time 10
 set -g base-index 1
 
 # switch windows alt+number
-bind-key -n M-1 select-window -t 1
-bind-key -n M-2 select-window -t 2
-bind-key -n M-3 select-window -t 3
-bind-key -n M-4 select-window -t 4
+bind-key -n M-1 select-window -t 'primary'
+bind-key -n M-2 select-window -t 'secondary'
+bind-key -n M-3 select-window -t 'wiki'
+bind-key -n M-4 select-window -t 'ssh_primary'
+bind-key -n M-5 select-window -t 'ssh_secondary'
+bind-key -n M-0 select-window -t 'cmus'
 
 # vim style copy to clipboard
 bind-key -T copy-mode-vi v send-keys -X begin-selection
