--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # change prefix to Ctrl-a (like in gnu-screen)
 unbind C-b
 set-option -g prefix C-a
-bind-key C-a send-prefix
+bind C-a send-prefix
 
 # source config file
 bind r source-file ~/.tmux.conf
@@ -19,16 +19,16 @@ set -g escape-time 10
 set -g base-index 1
 
 # switch windows alt+number
-bind-key -n M-1 select-window -t 'primary'
-bind-key -n M-2 select-window -t 'secondary'
-bind-key -n M-3 select-window -t 'wiki'
-bind-key -n M-4 select-window -t 'ssh_primary'
-bind-key -n M-5 select-window -t 'ssh_secondary'
-bind-key -n M-0 select-window -t 'cmus'
+bind -n M-1 select-window -t 'primary'
+bind -n M-2 select-window -t 'secondary'
+bind -n M-3 select-window -t 'wiki'
+bind -n M-4 select-window -t 'ssh_primary'
+bind -n M-5 select-window -t 'ssh_secondary'
+bind -n M-0 select-window -t 'cmus'
 
 # vim style copy to clipboard
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
 
 # easy-to-remember split pane commands
 bind -n C-E split-window -h -c "#{pane_current_path}"
@@ -47,6 +47,6 @@ bind -n M-f resize-pane -Z
 set -g status off
 
 # toggle broadcast to all panes
-bind-key a set-window-option synchronize-panes\; display-message "broadcast is #{?pane_synchronized,on,off}"
+bind a set-window-option synchronize-panes\; display-message "broadcast is #{?pane_synchronized,on,off}"
 
 set -g pane-active-border-style "bg=default fg=default"
