fix tmux key bindings after 3.5

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,11 +30,11 @@ bind -n M-0 select-window -t 'cmus'
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
 
-# easy-to-remember split pane commands
-bind C-E split-window -h -c "#{pane_current_path}"
-bind C-O split-window -v -c "#{pane_current_path}"
+# split panes
+bind C-e split-window -h -c "#{pane_current_path}"
+bind C-o split-window -v -c "#{pane_current_path}"
 
-# resize the current pane using Alt + direction
+# select panes
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 bind -n M-h select-pane -L
