increase history-limit for tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,3 +50,6 @@ set -g status off
 bind a set-window-option synchronize-panes\; display-message "broadcast is #{?pane_synchronized,on,off}"
 
 set -g pane-active-border-style "bg=default fg=default"
+
+# unfortunately some printouts are way larger than 2000 lines (the default)
+set -g history-limit 10000
