use zdiff3 instead diff3 for merges

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,7 +7,7 @@
     submodule=log
 [merge]
     tool=vimdiff
-    conflictstyle=diff3
+    conflictstyle=zdiff3
 [mergetool]
 	keepBackup=false
 [status]
