--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,3 +22,5 @@
 [delta]
     navigate = true  # use n and N to move between diff sections
     side-by-side = true
+[interactive]
+    diffFilter = delta --color-only
