--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,11 +19,13 @@ set -g escape-time 10
 set -g base-index 1
 
 # switch windows alt+number
-bind -n M-1 select-window -t 'primary'
-bind -n M-2 select-window -t 'secondary'
-bind -n M-3 select-window -t 'wiki'
-bind -n M-4 select-window -t 'ssh_primary'
-bind -n M-5 select-window -t 'ssh_secondary'
+bind -n M-1 select-window -t 'code_1'
+bind -n M-2 select-window -t 'code_2'
+bind -n M-3 select-window -t 'code_3'
+bind -n M-4 select-window -t 'code_4'
+bind -n M-7 select-window -t 'ssh_primary'
+bind -n M-8 select-window -t 'ssh_secondary'
+bind -n M-9 select-window -t 'wiki'
 bind -n M-0 select-window -t 'cmus'
 
 # vim style copy to clipboard
