--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,6 +23,8 @@ bind -n M-1 select-window -t 'code_1'
 bind -n M-2 select-window -t 'code_2'
 bind -n M-3 select-window -t 'code_3'
 bind -n M-4 select-window -t 'code_4'
+bind -n M-5 select-window -t 'code_5'
+bind -n M-6 select-window -t 'code_6'
 bind -n M-7 select-window -t 'ssh_primary'
 bind -n M-8 select-window -t 'ssh_secondary'
 bind -n M-9 select-window -t 'wiki'
